<resources>
    <string name="app_name">酷派天气</string>

    <string name="weather">城市天气</string>
    <string name="scenic">景点天气</string>
    <string name="bus">城市公交</string>
    <string name="reading">零点阅读</string>
    <string name="gank">福利专栏</string>
    <string name="settings">应用设置</string>
    <string name="about">关于我们</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="suggestion_air">空气指数</string>
    <string name="suggestion_air_info">气象条件有利于空气污染物稀释、扩散和清除，可在室外正常活动</string>
    <string name="suggestion_out">运动指数</string>
    <string name="suggestion_out_info">气象条件有利于空气污染物稀释、扩散和清除，可在室外正常活动</string>
    <string name="suggestion_car">洗车指数</string>
    <string name="suggestion_car_info">气象条件有利于空气污染物稀释、扩散和清除，可在室外正常活动</string>
    <string name="country">中国</string>
    <string name="city_scenic">城市景点</string>
    <string name="scenic_favorites">我的收藏</string>
    <string name="scenic_nearby">附近景点</string>
    <string name="footer_loading">加载中...</string>
    <string name="footer_empty">没有更多数据</string>
    <string name="footer_pull_load_more">上拉或点击加载更多</string>
    <string name="map_api">http://map.baidu.com/</string>

    <string name="menu_action_refresh">刷新</string>
    <string name="menu_action_share">分享</string>
    <string name="menu_action_copy">复制URL</string>
    <string name="menu_action_openwith">其他方式打开</string>

    <string name="copied_to_clipboard">已复制到粘贴板</string>
    <string name="scenic_search_query_hint">请输入景点名称...</string>
    <string name="theme">主题</string>
    <string name="done">确定</string>
    <string name="cancel">取消</string>

    <string-array name="tts_voice_item">
        <item>小燕（女声，普通话）</item>
        <item>小宇（男声，普通话）</item>
        <item>小妍（女声，普通话）</item>
        <item>小琪（女声，普通话）</item>
        <item>小峰（男声，普通话）</item>
        <item>小梅（女声，粤语）</item>
        <item>小莉（女声，台湾普通话）</item>
    </string-array>

    <string-array name="tts_voice_value">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
    </string-array>

    <string-array name="share_type">
        <item>纯文本</item>
        <item>仿锤子便签</item>
    </string-array>

    <string-array name="color_name">
        <item>青石色</item>
        <item>山茱萸</item>
        <item>绿篱</item>
        <item>樱草黄</item>
        <item>烈焰红</item>
        <item>天堂岛</item>
        <item>甘蓝</item>
        <item>粉蓍草</item>
        <item>尼亚加拉</item>
    </string-array>
    <string name="title_activity_about">AboutActivity</string>
    <string name="contact_me">• @JimChen\n• 1047004324@qq.com</string>
    <string name="open_source">• 和风天气提供天气数据\n• 百度定位提供定位服务\n• 『Gank』『煎蛋』『妹子图』提供妹纸数据\n</string>
</resources>
